I added more JavaScript

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,8 @@
     </script>
 </head>
 <body>
+    <h1> Black Innovator Trivia </h1> <br />
+    <p> How well do you think you know Black Innovators? </p>
    <a href="ques1.html">Start Playing!</a>
 </body>
  <footer class="footer ">
