--- a/www/ques2.html
+++ b/www/ques2.html
@@ -21,8 +21,8 @@
 </head>
 <body>
   <h2>answer this?</h2>
-  <button id="wrong1" onclick="Incorrect()">Answer A </button><br />
-  <button id="correct" onclick="Correct()">Answer B </button><br />
+  <button id="correct" onclick="Correct()">Answer A </button><br />
+  <button id="wrong1" onclick="Incorrect()">Answer B </button><br />
   <button id="wrong2" onclick="Incorrect2()">Answer C </button><br />
   <button id="wrong3" onclick="Incorrect3()">Answer D </button><br />
   <br />
