--- a/www/index.html
+++ b/www/index.html
@@ -19,13 +19,16 @@
     </script>
 </head>
 <body>
-    <h1> Black Innovator Trivia </h1> <br />
+    <h1> Black Innovator Trivia </h1>
+    <div>
+        <img src="http://i.amz.mshcdn.com/M2Y6YRzHRXL64spQ8TCgUvE_3Ek=/fit-in/1200x9600/http%3A%2F%2Fmashable.com%2Fwp-content%2Fuploads%2F2013%2F02%2Fbluford-jemison.jpg" Width="300" height="145">
+    </div>
     <p> How well do you think you know Black Innovators? </p>
-   <a href="ques1.html">Start Playing!</a>
+  <p> <a href="ques1.html" id="startbutton">Start Playing!</a></p>
 </body>
- <footer class="footer ">
+ <footer class="footer">
         <div class="container ">
-            <p class="text ">&copy; Myyah&SavanaInc.2016</p>
+            <p class="text">&copy; Myyah&SavanaInc.2016</p>
         </div>
   
 </html>
