--- a/www/ques2.html
+++ b/www/ques2.html
@@ -6,12 +6,13 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * data:; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <script src="components/loader.js"></script>
     <script src="lib/onsenui/js/onsenui.min.js"></script>
-    <script src="scripts/myScript.js"></script>
+    <script src="scripts/myScript2.js"></script>
 
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="lib/onsenui/css/onsenui.css">
     <link rel="stylesheet" href="lib/onsenui/css/onsen-css-components.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
 
     <script>
         ons.ready(function() {
@@ -20,11 +21,11 @@
     </script>
 </head>
 <body>
-  <h2>answer this?</h2>
-  <button id="correct" onclick="Correct()">Answer A </button><br />
-  <button id="wrong1" onclick="Incorrect()">Answer B </button><br />
-  <button id="wrong2" onclick="Incorrect2()">Answer C </button><br />
-  <button id="wrong3" onclick="Incorrect3()">Answer D </button><br />
+  <h2>Frank Greene was known for...</h2>
+  <button id="wrong2" onclick="Incorrect2()">designing the first Iphone.</button><br />
+  <button id="wrong1" onclick="Incorrect()">being the first black college professor.</button><br />
+  <button id="correct" onclick="Correct()">designing high speed computer systems.</button><br />
+  <button id="wrong3" onclick="Incorrect3()">being the first African American man in space.</button><br />
   <br />
   <p id="scoreCard">Score: 0 Points</p>
   
