--- a/www/ques5.html
+++ b/www/ques5.html
@@ -6,13 +6,13 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * data:; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <script src="components/loader.js"></script>
     <script src="lib/onsenui/js/onsenui.min.js"></script>
-    <script src="scripts/myScript.js"></script>
+    <script src="scripts/myScript5.js"></script>
 
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="lib/onsenui/css/onsenui.css">
     <link rel="stylesheet" href="lib/onsenui/css/onsen-css-components.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
     <script>
         ons.ready(function() {
             console.log("Onsen UI is ready!");
@@ -20,11 +20,11 @@
     </script>
 </head>
 <body>
-  <h2>answer this?</h2>
-  <button id="correct" onclick="Correct()">Answer A </button><br />
-  <button id="wrong1" onclick="Incorrect()">Answer B </button><br />
-  <button id="wrong2" onclick="Incorrect2()">Answer C </button><br />
-  <button id="wrong3" onclick="Incorrect3()">Answer D </button><br />
+  <h2>Who was the first self made millionaire who had a line of beauty and hair products for black woman?</h2>
+  <button id="correct" onclick="Correct()">Madam C.J. Walker</button><br />
+  <button id="wrong1" onclick="Incorrect()">Oprah Winfrey</button><br />
+  <button id="wrong2" onclick="Incorrect2()">Mary Drew</button><br />
+  <button id="wrong3" onclick="Incorrect3()">Sarah Goode</button><br />
   <br />
   <p id="scoreCard">Score: 0 Points</p>
   
