--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="lib/onsenui/css/onsenui.css">
     <link rel="stylesheet" href="lib/onsenui/css/onsen-css-components.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
     <script>
         ons.ready(function() {
             console.log("Onsen UI is ready!");
@@ -19,13 +19,14 @@
     </script>
 </head>
 <body>
-    <h1> Black Innovator Trivia </h1>
+    <h1> Black Minds </h1>
     <div>
-        <img src="http://i.amz.mshcdn.com/M2Y6YRzHRXL64spQ8TCgUvE_3Ek=/fit-in/1200x9600/http%3A%2F%2Fmashable.com%2Fwp-content%2Fuploads%2F2013%2F02%2Fbluford-jemison.jpg" Width="300" height="145">
+        <img src=http://il3.picdn.net/shutterstock/videos/11728685/thumb/10.jpg>
     </div>
     <p> How well do you think you know Black Innovators? </p>
   <p> <a href="ques1.html" id="startbutton">Start Playing!</a></p>
 </body>
+<br /> 
  <footer class="footer">
         <div class="container ">
             <p class="text">&copy; Myyah&SavanaInc.2016</p>
