--- a/www/ques3.html
+++ b/www/ques3.html
@@ -6,12 +6,13 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * data:; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <script src="components/loader.js"></script>
     <script src="lib/onsenui/js/onsenui.min.js"></script>
-    <script src="scripts/myScript.js"></script>
+    <script src="scripts/myScript3.js"></script>
 
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="lib/onsenui/css/onsenui.css">
     <link rel="stylesheet" href="lib/onsenui/css/onsen-css-components.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
 
     <script>
         ons.ready(function() {
@@ -20,11 +21,11 @@
     </script>
 </head>
 <body>
-  <h2>answerthis?</h2>
-  <button id="wrong1" onclick="Incorrect()">Answer A </button><br />
-  <button id="wrong2" onclick="Incorrect2()">Answer B </button><br />
-  <button id="wrong3" onclick="Incorrect3()">Answer C </button><br />
-  <button id="correct" onclick="Correct()">Answer D </button><br />
+  <h2>James E. West was known for...</h2>
+  <button id="wrong1" onclick="Incorrect()">building the first elecetric car.</button><br />
+  <button id="correct" onclick="Correct()">inventing the first electric microphone.</button><br />
+  <button id="wrong2" onclick="Incorrect2()">inventing the first oven.</button><br />
+  <button id="wrong3" onclick="Incorrect3()">being the first black broadcaster.</button><br />
   <br />
   <p id="scoreCard">Score: 0 Points</p>
   
