Changed question page and added pictures

--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
 <br /> 
  <footer class="footer">
         <div class="container ">
-            <p class="text">&copy; Myyah&SavanaInc.2016</p>
+            <p class="text"> Myyah&Savana.2016</p>
         </div>
   
 </html>
