--- a/www/ques1.html
+++ b/www/ques1.html
@@ -21,13 +21,16 @@
     </script>
 </head>
 <body>
-  <h2>Who was the first black woman to travel in space?</h2>
+  <h2>Who was the first black woman to travel in space?</h2> <br />
   <button id="wrong1" onclick="Incorrect()">Rosa Parks</button><br />
   <button id="correct" onclick="Correct()">Mae Jemison</button><br />
   <button id="wrong2" onclick="Incorrect2()">Gabby Douglas</button><br />
   <button id="wrong3" onclick="Incorrect3()">Cara Robinson</button><br />
-  <br />
-  <p id="scoreCard">Score: 0 Points</p>
+   <div>
+        <img id="light" src=http://1.bp.blogspot.com/-ts7FzEIxejk/UvzPxcT_w5I/AAAAAAAACGw/NTCa6A0GwbY/s1600/black+abstract+image+wallpaper+hd5.jpg>
+    </div>
+  
+  <!--<p id="scoreCard">Score: 0 Points</p> -->
   
 </body>
 </html>
