--- a/www/ques3.html
+++ b/www/ques3.html
@@ -21,13 +21,16 @@
     </script>
 </head>
 <body>
-  <h2>James E. West was known for...</h2>
+  <h2>James E. West was known for...</h2> <br />
   <button id="wrong1" onclick="Incorrect()">building the first elecetric car.</button><br />
   <button id="correct" onclick="Correct()">inventing the first electric microphone.</button><br />
   <button id="wrong2" onclick="Incorrect2()">inventing the first oven.</button><br />
   <button id="wrong3" onclick="Incorrect3()">being the first black broadcaster.</button><br />
-  <br />
-  <p id="scoreCard">Score: 0 Points</p>
+   <div>
+        <img id="light" src=http://1.bp.blogspot.com/-ts7FzEIxejk/UvzPxcT_w5I/AAAAAAAACGw/NTCa6A0GwbY/s1600/black+abstract+image+wallpaper+hd5.jpg>
+    </div>
+  
+  <!--<p id="scoreCard">Score: 0 Points</p>-->
   
 </body>
 </html>
