--- a/www/ques4.html
+++ b/www/ques4.html
@@ -20,13 +20,16 @@
     </script>
 </head>
 <body>
-  <h2>Who was the first black man to travel in space?</h2>
+  <h2>Who was the first black man to travel in space?</h2> <br /> 
   <button id="wrong1" onclick="Incorrect()">John Thomson</button><br />
   <button id="wrong3" onclick="Incorrect3()">Bill Clinton</button><br />
   <button id="wrong2" onclick="Incorrect2()">Muhammad Ali</button><br />
   <button id="correct" onclick="Correct()">Guion Bluford</button><br />
-  <br />
-  <p id="scoreCard">Score: 0 Points</p>
+   <div>
+        <img id="light" src=http://1.bp.blogspot.com/-ts7FzEIxejk/UvzPxcT_w5I/AAAAAAAACGw/NTCa6A0GwbY/s1600/black+abstract+image+wallpaper+hd5.jpg>
+    </div>
+  
+  <!--<p id="scoreCard">Score: 0 Points</p>-->
   
 </body>
 </html>
