--- a/www/ques5.html
+++ b/www/ques5.html
@@ -20,13 +20,15 @@
     </script>
 </head>
 <body>
-  <h2>Who was the first self made millionaire who had a line of beauty and hair products for black woman?</h2>
+  <h2>Who was the first self made millionaire who had a line of beauty and hair products for black woman?</h2> <br />
   <button id="correct" onclick="Correct()">Madam C.J. Walker</button><br />
   <button id="wrong1" onclick="Incorrect()">Oprah Winfrey</button><br />
   <button id="wrong2" onclick="Incorrect2()">Mary Drew</button><br />
   <button id="wrong3" onclick="Incorrect3()">Sarah Goode</button><br />
-  <br />
-  <p id="scoreCard">Score: 0 Points</p>
+   <div>
+        <img id="light" src=http://1.bp.blogspot.com/-ts7FzEIxejk/UvzPxcT_w5I/AAAAAAAACGw/NTCa6A0GwbY/s1600/black+abstract+image+wallpaper+hd5.jpg>
+    </div>
+  <!--<p id="scoreCard">Score: 0 Points</p>-->
   
 </body>
 </html>
