Changed grammar and spelling

--- a/www/ques2.html
+++ b/www/ques2.html
@@ -22,10 +22,10 @@
 </head>
 <body>
   <h2>Frank Greene was known for...</h2> <br /> 
-  <button id="wrong2" onclick="Incorrect2()">designing the first iPhone.</button><br />
-  <button id="wrong1" onclick="Incorrect()">being the first black college professor.</button><br />
-  <button id="correct" onclick="Correct()">designing high speed computer systems.</button><br />
-  <button id="wrong3" onclick="Incorrect3()">being the first African American man in space.</button><br />
+  <button id="wrong2" onclick="Incorrect2()">designing the first iPhone</button><br />
+  <button id="wrong1" onclick="Incorrect()">being the first black college professor</button><br />
+  <button id="correct" onclick="Correct()">designing high speed computer systems</button><br />
+  <button id="wrong3" onclick="Incorrect3()">being the first African American man in space</button><br />
  <div>
         <img id="light" src=http://1.bp.blogspot.com/-ts7FzEIxejk/UvzPxcT_w5I/AAAAAAAACGw/NTCa6A0GwbY/s1600/black+abstract+image+wallpaper+hd5.jpg>
     </div>
