--- a/www/ques5.html
+++ b/www/ques5.html
@@ -20,7 +20,7 @@
     </script>
 </head>
 <body>
-  <h2>Who was the first self made millionaire who had a line of beauty and hair products for black woman?</h2> <br />
+  <h2>Who was the first self-made millionaire who had a line of beauty and hair products for black women?</h2> <br />
   <button id="correct" onclick="Correct()">Madam C.J. Walker</button><br />
   <button id="wrong1" onclick="Incorrect()">Oprah Winfrey</button><br />
   <button id="wrong2" onclick="Incorrect2()">Mary Drew</button><br />
